<resources>
    <string name="app_name">Notification</string>
    <string name="set_time">Set time</string>
    <string name="action_settings">Settings</string>
    <string name="title">Thong Bao</string>
    <string name="subject">Chuc mung ban da trung giai</string>
    <string name="body">Chuc ban may man lan sau</string>
    <string name="set_time_alarm">Set Time Alarm</string>
    <string name="set_locate_alarm">Set Location Alarm</string>
    <string name="set_new_locate_alarm">Set New Location Alarm</string>
    <string name="title_marker">My Location</string>
    <string name="google_api_key">AIzaSyDM1tGPDILZ92M0Ukn_c9BL_REoO8BPjC8</string>
    <string name="cancel">Cancel</string>
    <string name="gps_setting">GPS Setting</string>
    <string name="gps_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="setting">Setting</string>
    <string name="options">Options</string>
    <string name="message_options">Choose action you want do to this Alarm</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="id">ID</string>
    <string name="toast_message_set">Location Alarm has been set</string>
    <string name="location_alarms_list">Location Alarms List</string>
    <string name="set_alarm_successful">Set Alarm Successful</string>
    <string name="set_repeat">Repeat:</string>
    <string name="time_alarms_list">Time Alarms List</string>
    <string name="set_new_time_alarm">Set New Time Alarm</string>
    <string name="time_alarm">Time Alarm</string>
    <string name="update_time_alarm">Update Time Alarm</string>
    <string name="no">NO</string>
    <string name="repeat_p"><![CDATA[Repeat must be >0]]></string>
    <string name="repeat_must_number">Repeat must be number</string>
    <string name="wrong_datetime">Wrong datetime input</string>
    <string name="set_new_alarm">Set New Alarm</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="seconds">seconds</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="default_repeat">(Default is not set repeat)</string>

</resources>
